// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run main collector 1`] = `
"[
 {
  \\"name\\": \\"commons\\"
 },
 {
  \\"name\\": \\"bojagiDecorator\\"
 }
]"
`;

exports[`run main collector 2`] = `
"[
 {
  \\"symbol\\": \\"Box\\",
  \\"isDefaultExport\\": true,
  \\"filePath\\": \\"src/components/Box.js\\",
  \\"gitPath\\": \\"packages/integration-tests/src/components/Box.js\\",
  \\"dependencies\\": [
   {
    \\"request\\": \\"react\\",
    \\"filePath\\": \\"\\",
    \\"isExternal\\": true
   },
   {
    \\"request\\": \\"styled-components\\",
    \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"stylis/stylis.min\\",
      \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"stylis-rule-sheet\\",
      \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"@emotion/unitless\\",
      \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react-is\\",
      \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./cjs/react-is.production.min.js\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"memoize-one\\",
      \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"prop-types\\",
      \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./factoryWithThrowingShims\\",
        \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./lib/ReactPropTypesSecret\\",
          \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     },
     {
      \\"request\\": \\"@emotion/is-prop-valid\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"merge-anything\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": false,
      \\"dependencies\\": []
     }
    ]
   }
  ],
  \\"exportName\\": \\"default\\",
  \\"name\\": \\"Box\\"
 },
 {
  \\"symbol\\": \\"BoxWithButtons\\",
  \\"isDefaultExport\\": true,
  \\"filePath\\": \\"src/components/BoxWithButtons.js\\",
  \\"gitPath\\": \\"packages/integration-tests/src/components/BoxWithButtons.js\\",
  \\"dependencies\\": [
   {
    \\"request\\": \\"react\\",
    \\"filePath\\": \\"\\",
    \\"isExternal\\": true
   },
   {
    \\"request\\": \\"styled-components\\",
    \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"stylis/stylis.min\\",
      \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"stylis-rule-sheet\\",
      \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"@emotion/unitless\\",
      \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react-is\\",
      \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./cjs/react-is.production.min.js\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"memoize-one\\",
      \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"prop-types\\",
      \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./factoryWithThrowingShims\\",
        \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./lib/ReactPropTypesSecret\\",
          \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     },
     {
      \\"request\\": \\"@emotion/is-prop-valid\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"merge-anything\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": false,
      \\"dependencies\\": []
     }
    ]
   },
   {
    \\"request\\": \\"./Box\\",
    \\"filePath\\": \\"src/components/Box.js\\",
    \\"gitPath\\": \\"packages/integration-tests/src/components/Box.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"react\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"styled-components\\",
      \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"stylis/stylis.min\\",
        \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"stylis-rule-sheet\\",
        \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react\\",
        \\"filePath\\": \\"\\",
        \\"isExternal\\": true
       },
       {
        \\"request\\": \\"@emotion/unitless\\",
        \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react-is\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./cjs/react-is.production.min.js\\",
          \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       },
       {
        \\"request\\": \\"memoize-one\\",
        \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"prop-types\\",
        \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./factoryWithThrowingShims\\",
          \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": [
           {
            \\"request\\": \\"./lib/ReactPropTypesSecret\\",
            \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
            \\"isExternal\\": false,
            \\"isNodeModule\\": false,
            \\"dependencies\\": []
           }
          ]
         }
        ]
       },
       {
        \\"request\\": \\"@emotion/is-prop-valid\\",
        \\"filePath\\": \\"\\",
        \\"isExternal\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"merge-anything\\",
        \\"filePath\\": \\"\\",
        \\"isExternal\\": false,
        \\"dependencies\\": []
       }
      ]
     }
    ]
   },
   {
    \\"request\\": \\"./Button\\",
    \\"filePath\\": \\"src/components/Button.js\\",
    \\"gitPath\\": \\"packages/integration-tests/src/components/Button.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"react\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"styled-components\\",
      \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"stylis/stylis.min\\",
        \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"stylis-rule-sheet\\",
        \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react\\",
        \\"filePath\\": \\"\\",
        \\"isExternal\\": true
       },
       {
        \\"request\\": \\"@emotion/unitless\\",
        \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react-is\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./cjs/react-is.production.min.js\\",
          \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       },
       {
        \\"request\\": \\"memoize-one\\",
        \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"prop-types\\",
        \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./factoryWithThrowingShims\\",
          \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": [
           {
            \\"request\\": \\"./lib/ReactPropTypesSecret\\",
            \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
            \\"isExternal\\": false,
            \\"isNodeModule\\": false,
            \\"dependencies\\": []
           }
          ]
         }
        ]
       },
       {
        \\"request\\": \\"@emotion/is-prop-valid\\",
        \\"filePath\\": \\"\\",
        \\"isExternal\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"merge-anything\\",
        \\"filePath\\": \\"\\",
        \\"isExternal\\": false,
        \\"dependencies\\": []
       }
      ]
     }
    ]
   }
  ],
  \\"exportName\\": \\"default\\",
  \\"name\\": \\"BoxWithButtons\\"
 },
 {
  \\"symbol\\": \\"Button\\",
  \\"isDefaultExport\\": true,
  \\"filePath\\": \\"src/components/Button.js\\",
  \\"gitPath\\": \\"packages/integration-tests/src/components/Button.js\\",
  \\"dependencies\\": [
   {
    \\"request\\": \\"react\\",
    \\"filePath\\": \\"\\",
    \\"isExternal\\": true
   },
   {
    \\"request\\": \\"styled-components\\",
    \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"stylis/stylis.min\\",
      \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"stylis-rule-sheet\\",
      \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"@emotion/unitless\\",
      \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react-is\\",
      \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./cjs/react-is.production.min.js\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"memoize-one\\",
      \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"prop-types\\",
      \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./factoryWithThrowingShims\\",
        \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./lib/ReactPropTypesSecret\\",
          \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     },
     {
      \\"request\\": \\"@emotion/is-prop-valid\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"merge-anything\\",
      \\"filePath\\": \\"\\",
      \\"isExternal\\": false,
      \\"dependencies\\": []
     }
    ]
   }
  ],
  \\"exportName\\": \\"default\\",
  \\"name\\": \\"Button\\"
 }
]"
`;

exports[`run main collector 3`] = `"2e18e248727c4dc3e3b97632f6f4b96d597b7cefeba94b8086271a2a146a66cf"`;

exports[`run main collector 4`] = `"7a78a7ffc083765bf35202dd1a6deef0b7bdd044b55ee43cf9a0f1700e839299"`;

exports[`run main collector 5`] = `
"[
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"yellow\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"I am a yellow Box!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Yellow\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"green\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"I am so green!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Green\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"red\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"I am so green! I mean red...\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Red\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"blue\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"Blue.\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Blue\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"brown\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"Gasp\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Brown\\"
 }
]"
`;

exports[`run main collector 6`] = `"bd356c3bcdfe1bd26080fa5816c7545f5a6f84550a3220acff09fa37b2dad966"`;

exports[`run main collector 7`] = `
"[
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"white\\"
   },
   \\"buttons\\": {
    \\"type\\": \\"object\\",
    \\"value\\": [
     {
      \\"text\\": \\"stop\\",
      \\"color\\": \\"red\\"
     },
     {
      \\"text\\": \\"ready\\",
      \\"color\\": \\"yellow\\"
     },
     {
      \\"text\\": \\"go\\",
      \\"color\\": \\"green\\"
     }
    ]
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Traffic Light\\"
 }
]"
`;

exports[`run main collector 8`] = `"ad8ad1d26899bbbe5bceea76a4e2e7830879504246989f61eecd3467f4eb3c2b"`;

exports[`run main collector 9`] = `
"[
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"yellow\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"click!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Button Yellow\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"green\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"click!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Button Green\\"
 }
]"
`;
